[package]
name = "Glaive"
version = "2.0.0"
authors = ["Muhammad Nizwa | MMADUs <nizbacking@gmail.com>"]
license = "GNU Affero General Public License v3.0"
edition = "2021"

[dependencies]
async-trait="0.1"
pingora = { version = "0.3.0", features = ["lb", "cache"] }
pingora-limits = "0.3.0"
once_cell = "1.19.0"
serde_yaml = "0.9.34+deprecated"
serde = { version = "1.0.209", features = ["derive"] }
http = "1.1.0"
bytes = { version = "1.7.0", features = ["serde"] }
serde_json = "1.0.127"
tracing-subscriber = "0.3.18"
tracing = "0.1"
jsonwebtoken = "9.3.0"
dotenv = "0.15"
validator = { version = "0.18.1", features = ["derive"] }
rs-consul = "0.7.0"
tokio = { version = "1.40.0", features = ["full"] }
scc = { version = "2.0.19", features = ["serde"] }
ahash = "0.8.11"