[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
parking_lot = "0.12"
crossbeam-queue = "0.3"
thread_local = "1.1"
lru = "0.12.5"
ahash = "0.8.11"
libc = "0.2.162"
nix = "~0.24.3"
socket2 = "0.5.7"
bytes = "1.8.0"
http = "1.1.0"
httparse = "1.9.5"
httpdate = "1.0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2"
dotenv = "0.15"
